k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard-prod
  labels:
    name: dashboard-prod
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard-staging
  labels:
    name: dashboard-staging
    environment: staging
